gogs.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: gogs
  name: gogs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gogs
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gogs
    spec:
      containers:
      - image: gogs/gogs
        name: gogs
        resources: {}
status: {}
