mysqlhostpath.yml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-hostpath
spec:
  containers:
  - image: mysql
    name: test-container
    volumeMounts:
    - mountPath: /var/lib/mysql
      name: mysql-hostpath-volume
  volumes:
  - name:  mysql-hostpath-volume
    hostPath:
     path: /mysqldata
     type: DirectoryOrCreate
