nodeselector.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-labels1
  labels:
    env: test
spec:
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
  nodeSelector: 
    hdd: ssd
