rule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
   - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mydep10
            port:
              number: 80
      - path: /cisco2
        pathType: Prefix
        backend:
          service:
            name: mydep10
            port: 
               number: 80
